--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1608,13 +1608,13 @@ a:hover {
 /* line 496, ../scss/custom.scss */
 .above-header h1 {
   margin-top: 30px;
-  font-size: 80px;
+  font-size: 75px;
   z-index: 999;
 }
 @media only all and (max-width: 1199px) {
   /* line 496, ../scss/custom.scss */
   .above-header h1 {
-    font-size: 70px;
+    font-size: 65px;
   }
 }
 @media only all and (max-width: 1199px) {
@@ -1646,6 +1646,8 @@ a:hover {
   /* line 523, ../scss/custom.scss */
   #cherry-blossoms {
     z-index: -1;
+    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
+    opacity: 0.5;
   }
 }
 
@@ -1660,7 +1662,7 @@ a:hover {
 @media only all and (max-width: 1199px) {
   /* line 529, ../scss/custom.scss */
   #cb-a {
-    background-position: -330px 100px;
+    background-position: -370px 100px;
   }
 }
 @media only all and (max-width: 991px) {
