--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -495,10 +495,10 @@ $thumb_hover: $red;
 
     h1 {
         margin-top: 30px;
-        font-size: 80px;
+        font-size: 75px;
         z-index: 999;
         @include max_desktop{
-            font-size: 70px;
+            font-size: 65px;
         }
         @include max_desktop{
             font-size: 65px;
@@ -523,7 +523,7 @@ $thumb_hover: $red;
 #cherry-blossoms{
     @include max_tablet{
         z-index: -1;
-        // @include opacity(0.618);
+        @include opacity(0.5);
     }
 }
 #cb-a{
@@ -535,7 +535,7 @@ $thumb_hover: $red;
     width: 100%;
 
     @include max_desktop{
-        background-position: -330px 100px;
+        background-position: -370px 100px;
     }
     @include max_laptop{
         background-position: -545px 100px;
