--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -81,7 +81,7 @@
         }
     }
     > .container{
-        background-color: rgba(black, 0.75);
+        @extend %opaqueBg;
     }
 }
 .navbar-nav {
