--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -97,6 +97,9 @@ a{
     &:hover{
         @include transition(color, 0.25s);
     }
+    @include max_tablet{
+        @include transition(0);
+    }
 }
 p {
     // padding:        15px 0;
